Feat: Se agrega "protección contra sobrescritura al mover registros del ciclo"
